--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ body {
   
 }
 
+@font-face {
+  font-family: 'apple_regular';
+  src: url('/css/fonts/apple_-webfont.woff2') format('woff2'),
+       url('/css/fonts/apple_-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
