--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
   
 }
 
+.title{
+  color: #ffffff;
+}
+
 @font-face {
   font-family: 'apple_regular';
   src: url('/css/fonts/apple_-webfont.woff2') format('woff2'),
