--- a/stylemain.css
+++ b/stylemain.css
@@ -81,27 +81,24 @@ a {
   background: #ffffff;
   color: #5024cc;
   border: 3px solid #5024cc;
-  padding: 3px 2px 3px 3px;
-  height: 75%;
+  height: calc(100% - 65px);
   overflow-x: hidden;
   overflow-y: scroll;
   margin: 5px;
   padding: 5px;
-  
 }
 .contentC{
   background: #ffffff;
   color: #5024cc;
   border: 3px solid #5024cc;
-  padding: 3px 2px 3px 3px;
-  height: 75%;
+  height: calc(100% - 65px);
   overflow-x: hidden;
   overflow-y: scroll;
   margin: 5px;
   padding: 5px;
   font-family: 'apple_regular';
-  font-weight:normal;
-  font-style:normal;
+  font-weight: normal;
+  font-style: normal;
 }
 #controls{
   display: flex;
