--- a/styleblog.css
+++ b/styleblog.css
@@ -58,17 +58,6 @@ a {
   display: flex;
   justify-content: center;
 }
-.navblock {
-  background: #dfdedf;
-  display: inline-block;
-  border: 3px solid #a8a8a8;
-  border-style: outset;
-  width: 300px;
-  height: 85vh;
-  overflow-y: hidden;
-  overflow-x: hidden;
-  margin: 10px;
-}
 
 .contentblock {
   background: #dfdedf;
@@ -88,24 +77,12 @@ a {
   display: flex;
   margin: 5px;
 }
-.contentN{
-  background: #ffffff;
-  color: #5024cc;
-  border: 3px solid #5024cc;
-  padding: 3px 2px 3px 3px;
-  height: 77.5vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  margin: 5px;
-  padding: 5px;
-  
-}
 .contentC{
   background: #ffffff;
   color: #5024cc;
   border: 3px solid #5024cc;
   padding: 3px 2px 3px 3px;
-  height: 77.5vh;
+  height: calc(100% - 65px);
   overflow-x: hidden;
   overflow-y: auto;
   margin: 5px;
@@ -124,26 +101,23 @@ a {
   font-size: 13px;
   margin: 0px;
 }
-.title {
-  font-size:25px;
-  margin: 0;
+.photocredit {
+  font-size: 10px;
 }
 /* for phones*/
 @media only screen and (max-width: 880px) {
-.wrapp {flex-wrap: wrap}
-.navblock {width: 100vh; height: 30vh;}
-.contentN {height: 22vh; overflow-y: hidden;}
-.contentblock {width: 100vh; height: 50vh;}
-.contentC {height: 42vh; overflow-y: scroll; word-wrap: break-word;}
-
+  .wrapp {flex-wrap: wrap}
+  .navblock {width: 100vh; height: 30vh;}
+  .contentN {height: calc(100% - 65px); overflow-y: scroll;}
+  .contentblock {width: 100vh; height: 50vh;}
+  .contentC {height: calc(100% - 65px); overflow-y: scroll; word-wrap: break-word;}
 }
-/* for zflip phones*/
+/* for zflip phones */
 @media only screen and (max-width: 320px) {
-.wrapp {flex-wrap: wrap}
-.navblock {width: 100vh; height: 30vh;}
-.contentN {height: 22vh; overflow-y: hidden;}
-.contentblock {width: 100vh; height: 50vh;}
-.contentC {height: 42vh; overflow-y: scroll; word-wrap: break-word;}
-.headertext { font-size: 10px; }
-
+  .wrapp {flex-wrap: wrap}
+  .navblock {width: 100vh; height: 30vh;}
+  .contentN {height: calc(100% - 65px); overflow-y: scroll;}
+  .contentblock {width: 100vh; height: 50vh;}
+  .contentC {height: calc(100% - 65px); overflow-y: scroll; word-wrap: break-word;}
+  .headertext { font-size: 10px; }
 }
