--- a/stylemain.css
+++ b/stylemain.css
@@ -53,7 +53,7 @@ a {
   border: 3px solid #a8a8a8;
   border-style: outset;
   width: 300px;
-  height: 85vh;
+  height: fit-content;
   overflow-y: hidden;
   overflow-x: hidden;
   margin: 10px;
@@ -83,7 +83,7 @@ a {
   border: 3px solid #5024cc;
   height: calc(100% - 65px);
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
   margin: 5px;
   padding: 5px;
 }
@@ -114,22 +114,28 @@ a {
   font-size:25px;
   margin: 0;
 }
+.subtitle{
+  margin: 0;
+  font-size: 10px;
+  color: #ffffff;
+}
+
 /* for phones*/
 @media only screen and (max-width: 880px) {
-.wrapp {flex-wrap: wrap}
-.navblock {width: 100vh; height: 30vh;}
-.contentN {height: 70%; overflow-y: scroll;}
-.contentblock {width: 100vh; height: 50vh;}
-.contentC {height: 82%; overflow-y: scroll; word-wrap: break-word;}
-
+  .wrapp {flex-wrap: wrap}
+  .navblock {width: 100vh; height: 30vh;}
+  .contentN {height: calc(100% - 65px); overflow-y: scroll;}
+  .contentblock {width: 100vh; height: 50vh;}
+  .contentC {height: calc(100% - 65px); overflow-y: scroll; word-wrap: break-word;}
 }
-/* for zflip phones*/
+/* for zflip phones */
 @media only screen and (max-width: 320px) {
-.wrapp {flex-wrap: wrap}
-.navblock {width: 100vh; height: 30vh;}
-.contentN {height: 70%; overflow-y: scroll;}
-.contentblock {width: 100vh; height: 50vh;}
-.contentC {height: 82%; overflow-y: scroll; word-wrap: break-word;}
-.headertext { font-size: 10px; }
-
+  .wrapp {flex-wrap: wrap}
+  .navblock {width: 100vh; height: 30vh;}
+  .contentN {height: calc(100% - 65px); overflow-y: scroll;}
+  .contentblock {width: 100vh; height: 50vh;}
+  .contentC {height: calc(100% - 65px); overflow-y: scroll; word-wrap: break-word;}
+  .headertext { font-size: 10px; }
+  
 }
+ 
